Add load balancing and replication

--- a/assets/index.html
+++ b/assets/index.html
@@ -23,16 +23,16 @@
 <li>Возможность оценить товар по окончании периода аренды.</li>
 </ol>
 <h2 id="use-case-диаграмма-системы">Use-case диаграмма системы</h2>
-<p><img src="/docs/res/use_case.svg" alt=""></p>
+<p><img src="docs/res/use_case.svg" alt=""></p>
 <h2 id="bpmn-диаграмма-основных-бизнес-процессов">BPMN диаграмма основных бизнес-процессов</h2>
 <h3 id="аренда-товара">Аренда товара</h3>
-<p><img src="/docs/res/bpmn/arenda.svg" alt=""></p>
+<p><img src="docs/res/bpmn/arenda.svg" alt=""></p>
 <h3 id="завершение-аренды-товара">Завершение аренды товара</h3>
-<p><img src="/docs/res/bpmn/arenda_stop.svg" alt=""></p>
+<p><img src="docs/res/bpmn/arenda_stop.svg" alt=""></p>
 <h3 id="предоставление-товара-для-аренды">Предоставление товара для аренды</h3>
-<p><img src="/docs/res/bpmn/provide.svg" alt=""></p>
+<p><img src="docs/res/bpmn/provide.svg" alt=""></p>
 <h3 id="возврат-товара-арендодателю">Возврат товара арендодателю</h3>
-<p><img src="/docs/res/bpmn/revoke.svg" alt=""></p>
+<p><img src="docs/res/bpmn/revoke.svg" alt=""></p>
 <h2 id="основные-пользовательские-сценарии">Основные пользовательские сценарии</h2>
 <h3 id="аренда-товара-2">Аренда товара</h3>
 <p>Пользователь:</p>
@@ -94,28 +94,28 @@
 подтверждения, получает товар.</li>
 </ol>
 <h2 id="er-диаграмма-сущностей">ER-диаграмма сущностей</h2>
-<p><img src="/docs/res/er.svg" alt=""></p>
+<p><img src="docs/res/er.svg" alt=""></p>
 <h2 id="диаграмма-бд">Диаграмма БД</h2>
-<p><img src="/docs/res/er_bd.svg" alt=""></p>
+<p><img src="docs/res/er_bd.svg" alt=""></p>
 <h2 id="компонентная-диаграмма-системы">Компонентная диаграмма системы</h2>
-<p><img src="/docs/res/component.svg" alt=""></p>
+<p><img src="docs/res/component.svg" alt=""></p>
 <h2 id="экраны-будущего-web-приложения">Экраны будущего web-приложения</h2>
 <h3 id="главный-экран">Главный экран</h3>
-<p><img src="/docs/res/ui/main.svg" alt=""></p>
+<p><img src="docs/res/ui/main.svg" alt=""></p>
 <h3 id="регистрация">Регистрация</h3>
-<p><img src="/docs/res/ui/registration.svg" alt=""></p>
+<p><img src="docs/res/ui/registration.svg" alt=""></p>
 <h3 id="каталог">Каталог</h3>
 <h4 id="выбор-категории">Выбор категории</h4>
-<p><img src="/docs/res/ui/catalog_category.svg" alt=""></p>
+<p><img src="docs/res/ui/catalog_category.svg" alt=""></p>
 <h4 id="выбор-товара">Выбор товара</h4>
-<p><img src="/docs/res/ui/catalog_items.svg" alt=""></p>
+<p><img src="docs/res/ui/catalog_items.svg" alt=""></p>
 <h3 id="страница-товара">Страница товара</h3>
-<p><img src="/docs/res/ui/product_description.svg" alt="">
-<img src="/docs/res/ui/product_instances.svg" alt=""></p>
+<p><img src="docs/res/ui/product_description.svg" alt="">
+<img src="docs/res/ui/product_instances.svg" alt=""></p>
 <h4 id="отзывы">Отзывы</h4>
-<p><img src="/docs/res/ui/product_reviews.svg" alt=""></p>
+<p><img src="docs/res/ui/product_reviews.svg" alt=""></p>
 <h3 id="список-аренд-пользователя">Список аренд пользователя</h3>
-<p><img src="/docs/res/ui/rents.svg" alt=""></p>
+<p><img src="docs/res/ui/rents.svg" alt=""></p>
 <blockquote>
 <p><strong>Не отображенные состояния аренды:</strong></p>
 <p><em>Арендодатель потребовал возврат:</em> Необходимо выбрать пункт выдачи,
@@ -124,13 +124,13 @@
 <p><em>Готов к выдаче</em>: Также отображается код подтверждения</p>
 </blockquote>
 <h3 id="корзина">Корзина</h3>
-<p><img src="/docs/res/ui/cart.svg" alt=""></p>
+<p><img src="docs/res/ui/cart.svg" alt=""></p>
 <h3 id="профиль">Профиль</h3>
-<p><img src="/docs/res/ui/profile.svg" alt=""></p>
+<p><img src="docs/res/ui/profile.svg" alt=""></p>
 <h3 id="платежные-данные">Платежные данные</h3>
-<p><img src="/docs/res/ui/payment.svg" alt=""></p>
+<p><img src="docs/res/ui/payment.svg" alt=""></p>
 <h3 id="список-предоставленных-товаров">Список предоставленных товаров</h3>
-<p><img src="/docs/res/ui/provider.svg" alt=""></p>
+<p><img src="docs/res/ui/provider.svg" alt=""></p>
 <blockquote>
 <p><strong>Не отображенные состояния аренды:</strong></p>
 <p><em>В доставке</em></p>
@@ -138,13 +138,13 @@
 </blockquote>
 <h3 id="управление-складом">Управление складом</h3>
 <h4 id="список-товаров-на-складе">Список товаров на складе</h4>
-<p><img src="/docs/res/ui/warehouse_storage.svg" alt=""></p>
+<p><img src="docs/res/ui/warehouse_storage.svg" alt=""></p>
 <h4 id="список-заявок-пользователей">Список заявок пользователей</h4>
-<p><img src="/docs/res/ui/warehouse_rent.svg" alt=""></p>
+<p><img src="docs/res/ui/warehouse_rent.svg" alt=""></p>
 <h4 id="список-заявок-арендодателей">Список заявок арендодателей</h4>
-<p><img src="/docs/res/ui/warehouse_provide.svg" alt=""></p>
+<p><img src="docs/res/ui/warehouse_provide.svg" alt=""></p>
 <h4 id="список-доставок">Список доставок</h4>
-<p><img src="/docs/res/ui/warehouse_delivery.svg" alt=""></p>
+<p><img src="docs/res/ui/warehouse_delivery.svg" alt=""></p>
 <blockquote>
 <p><strong>Не отображенные состояния доставки:</strong></p>
 <p><em>Перемещение между пунктами выдачи</em></p>
